# termanote

./: Cargo.toml
src/: cli.rs  db.rs  list.rs  main.rs  note.rs  rm.rs
src/commands/: command.rs  delete.rs  mod.rs  open.rs  search.rs  tn.rs
